# Tremor

./: .clangd  .gitignore  CMakeLists.txt  run.sh
src/: main.cpp  pipewireListNodes.cpp
